# htwg-programming-project

./: .gitignore  CMakeLists.txt  main.c  readme.md
src/: 5.6  5.6.c  audio.c  audio.h  audioInterface.h  keyboard.c  keyboard.h  main.c  noteScheduler.c  noteScheduler.h  notes.h  songs.c  songs.h  tempCodeRunnerFile.txt  timing.c  timing.h
src/5.6.dSYM/Contents/Resources/DWARF/: 5.6
src/5.6.dSYM/Contents/Resources/Relocations/aarch64/: 5.6.yml
src/audio/: audio.c  audio.h  audioConfig.c  audioConfig.h  audioDemo.c  audioDemo.h  chords.c  chords.h  noteScheduler.c  noteScheduler.h  notes.c  notes.h  queue.c  queue.h  songs.c  songs.h  timing.c  timing.h
src/tests/: noteSchedulerTester.c  noteSchedulerTester.h
src/ui/: ui_active.c  ui_active.h  ui_handler.c  ui_handler.h
